--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Fira Code' rel='stylesheet'>
 </head>
 
 <body>
-
 <!--replicated from starter code of previous portfolio-->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary customNav">
@@ -49,3 +49,13 @@
             </div>
         </nav>
     </header>
+
+    <!--Jumbotron-->
+<div class="p-5 mb-4 bg-body-tertiary rounded-3 jumbotron">
+    <div class="container-fluid py-5 jumbotronContent">
+        <h1 class="display-5 fw-bold">Lauren Eaton - Student Front-End Web Developer</h1>
+        <br>
+        <img class="profilePicture" src="./images/Profile Picture.jpg">
+        <p class="col-md-8 fs-4"></p>
+    </div>
+</div>
