--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <p class="col-md-8 fs-4"></p>
     </div>
 </div>
+
 <main class="projectsSection">
 <div class="title">
     <h1>Projects</h1>
@@ -103,5 +104,13 @@
 <section>
     <div class="skillsSection">
         <h1 class="title">Skills</h1>
+        <ul class="list-group">
+            <li class="list-group-item"><img src="./images/html5.svg"> HTML</li>
+            <li class="list-group-item"><img src="./images/css3-alt.svg"> CSS</li>
+            <li class="list-group-item"><img src="./images/js.svg"> Javascript</li>
+            <li class="list-group-item"><img src="./images/pen-nib-solid.svg"> Web Design</li>
+            <li class="list-group-item"><img src="./images/file-code-regular.svg"> Responsive Design</li>
+            <li class="list-group-item"> <img src="./images/code-solid.svg"> Frameworks and Libraries</li>
+        </ul>
     </div>
 </section>
