added about me section

--- a/index.html
+++ b/index.html
@@ -114,3 +114,25 @@
         </ul>
     </div>
 </section>
+
+<section class="aboutme">
+    <h1 class="title">About Me</h1>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col aboutme-section">
+            <div class="card h-100">
+                <img src="./images/photography.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Hi! I'm Lauren!</h5>
+                    <p class="card-text">I am originally from Ilkeston, Derbyshire, but now live in Nottingham. I graduated from the
+                        University of Leeds in 2018
+                        and have made a career mostly in translation and localisation, utilising my BA Japanese Studies degree to assist in
+                        Japanese to English projects of all sizes and categories.<br><br> Since I was a teenager I have been involved with the
+                        charity <span style="color: #db5c4c; font-weight: bold;">STAMMA</span> through
+                        various fundraisers and events, showing support for
+                        other young-adults who have struggled with stammering from childhood, as I have, and helping them gain the
+                        confidence and desire to speak oepnly outside of speech therapy.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
