fixed sine formatting issues with ul

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 </div>
 </main>
-
+<!--skills section-->
 <section>
     <div class="skillsSection">
         <h1 class="title">Skills</h1>
@@ -122,7 +122,7 @@
             <div class="card h-100">
                 <img src="./images/photography.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Hi! I'm Lauren!</h5>
+                    <h5 class="card-title">Hi, I'm Lauren!</h5>
                     <p class="card-text">I am originally from Ilkeston, Derbyshire, but now live in Nottingham. I graduated from the
                         University of Leeds in 2018
                         and have made a career mostly in translation and localisation, utilising my BA Japanese Studies degree to assist in
@@ -136,3 +136,7 @@
         </div>
     </div>
 </section>
+
+
+
+<!--footer-->
