--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary customNav">
             <div class="container-fluid">
-                <a class="navbar-brand " id="name" href="#">Lauren Eaton</a>
+                <a class="navbar-brand " id="name" >Lauren Eaton</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,16 +25,13 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" id="home" href="#">Home</a>
+                            <a class="nav-link" id="projects" href="#my-projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="projects" href="#">Projects</a>
+                            <a class="nav-link" id="skills" href="#my-skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="skills" href="#">Skills</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" id="aboutme" aria-current="page" href="#">About Me | Contact</a>
+                            <a class="nav-link active" id="aboutme" aria-current="page" href="#about-me">About Me | Contact</a>
                         </li>
                     </span>
                 </div>
@@ -52,7 +49,7 @@
     </div>
 </div>
 
-<main class="projectsSection">
+<main class="projectsSection" id="my-projects">
 <div class="title">
     <h1>Projects</h1>
 </div>
@@ -102,7 +99,7 @@
 </main>
 <!--skills section-->
 <section>
-    <div class="skillsSection">
+    <div class="skillsSection" id="my-skills">
         <h1 class="title">Skills</h1>
         <ul class="list-group">
             <li class="list-group-item"><img src="./images/html5.svg"> HTML</li>
@@ -115,7 +112,7 @@
     </div>
 </section>
 
-<section class="aboutme">
+<section class="aboutme" id="about-me">
     <h1 class="title">About Me</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col aboutme-section">
@@ -127,7 +124,7 @@
                         University of Leeds in 2018
                         and have made a career mostly in translation and localisation, utilising my BA Japanese Studies degree to assist in
                         Japanese to English projects of all sizes and categories.<br><br> Since I was a teenager I have been involved with the
-                        charity <span style="color: #db5c4c; font-weight: bold;">STAMMA</span> through
+                        charity <span style="color: #db5c4c; font-weight: bolder;">STAMMA</span> through
                         various fundraisers and events, showing support for
                         other young-adults who have struggled with stammering from childhood, as I have, and helping them gain the
                         confidence and desire to speak oepnly outside of speech therapy.</p>
@@ -135,8 +132,20 @@
             </div>
         </div>
     </div>
+    <!--contact section-->
+<div class="contact-section">
+    <h1 class="title">Contacts</h1>
+<ul class="contact-list">
+    <li class="list-group-item"><img src="./images/envelope-solid.svg"> E-mail</li>
+    <li class="list-group-item"><img src="./images/linkedin.svg"> LinkedIn</li>
+    <li class="list-group-item"><img src="./images/square-instagram.svg"> Instagram</li>
+    <li class="list-group-item"><img src="./images/address-book-solid.svg"> Phone Number</li>
+</ul>
+</div>
 </section>
 
-
-
 <!--footer-->
+<footer>
+
+</footer>
+</body>
