added contact on same row as about me

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </section>
 
 <section class="aboutme" id="about-me">
-    <h1 class="title">About Me</h1>
+    <h1 class="title">About Me | Contact</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col aboutme-section">
             <div class="card h-100">
@@ -131,21 +131,15 @@
                 </div>
             </div>
         </div>
+        <ul class="contact-list">
+            <li class="list-group-item"><img src="./images/envelope-solid.svg"> E-mail</li>
+            <li class="list-group-item"><img src="./images/linkedin.svg"> LinkedIn</li>
+            <li class="list-group-item"><img src="./images/square-instagram.svg"> Instagram</li>
+            <li class="list-group-item"><img src="./images/address-book-solid.svg"> Phone Number</li>
+        </ul>
     </div>
+    
     <!--contact section-->
-<div class="contact-section">
-    <h1 class="title">Contacts</h1>
-<ul class="contact-list">
-    <li class="list-group-item"><img src="./images/envelope-solid.svg"> E-mail</li>
-    <li class="list-group-item"><img src="./images/linkedin.svg"> LinkedIn</li>
-    <li class="list-group-item"><img src="./images/square-instagram.svg"> Instagram</li>
-    <li class="list-group-item"><img src="./images/address-book-solid.svg"> Phone Number</li>
-</ul>
-</div>
+
 </section>
-
-<!--footer-->
-<footer>
-
-</footer>
 </body>
