added footer with icons

--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
         </div>
     </div>
 </div>
-</main>
 <!--skills section-->
 <section>
     <div class="skillsSection" id="my-skills">
@@ -117,7 +116,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col aboutme-section">
             <div class="card h-100">
-                <img src="./images/photography.png" class="card-img-top" alt="...">
+                <img src="./images/photography.png" class="card-img-top" alt="japan photography">
                 <div class="card-body">
                     <h5 class="card-title">Hi, I'm Lauren!</h5>
                     <p class="card-text">I am originally from Ilkeston, Derbyshire, but now live in Nottingham. I graduated from the
@@ -138,8 +137,14 @@
             <li class="list-group-item"><img src="./images/address-book-solid.svg"> Phone Number</li>
         </ul>
     </div>
-    
-    <!--contact section-->
-
 </section>
+<!--footer-->
+<footer>
+    <ul class="footer-list">
+        <li><img src="./images/github.svg"> GitHub</li>
+        <li><img src="./images/file-solid.svg"> CV</li>
+    </ul>
+</footer>
+</main>
 </body>
+</html>
