--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary customNav">
             <div class="container-fluid">
-                <a class="navbar-brand " id="name" >Lauren Eaton</a>
+                <a class="navbar-brand " id="my-name" >Lauren Eaton</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -144,6 +144,9 @@
         <li><img src="./images/github.svg"> GitHub</li>
         <li><img src="./images/file-solid.svg"> CV</li>
     </ul>
+    <div class="home" href="#my-name">
+        <a href="#my-name" <button type="button" class="btn btn-outline-light homeButton">Top</button></a>
+    </div>
 </footer>
 </main>
 </body>
