added hover to nav bar and grid content

--- a/index.html
+++ b/index.html
@@ -58,20 +58,24 @@
     <!--horiseon-->
     <div class="col">
         <div class="card">
+            <a id="horiseon" title="horiseon picture" href="https://eatontechnology.github.io/horiseon-code-refactor/" target="_blank">
             <img src="./images/horiseon.jpeg" class="card-img-top" alt="horiseon cover">
             <div class="card-body">
+                </a>
                 <h4 class="card-title">Horiseon Code Refactor</h4>
-                <p class="card-text">CSS refactoring project for Horiseon</p>
+                <p class="card-text">CSS refactoring project for Horiseon to simplify and tidy up the associated style sheet, whilst keeping formatting.</p>
             </div>
         </div>
     </div>
     <!--html and css portfolio-->
     <div class="col">
         <div class="card">
+            <a id="past-portfolio" title="past-portfolio" href="https://eatontechnology.github.io/Lauren-Eaton-Portfolio/" target="_blank">
             <img src="./images/cropped portfolio.jpg" class="card-img-top" alt="portfolio">
             <div class="card-body">
+                </a>
                 <h4 class="card-title">HTML and CSS Portfolio</h4>
-                <p class="card-text">Portfolio made in HTML and styled with CSS</p>
+                <p class="card-text">Portfolio made in HTML and styled with CSS made entirely from scratch to show current and future work using placeholders.</p>
             </div>
         </div>
     </div>
@@ -111,6 +115,7 @@
     </div>
 </section>
 
+<!--about me section-->
 <section class="aboutme" id="about-me">
     <h1 class="title">About Me | Contact</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -131,10 +136,19 @@
             </div>
         </div>
         <ul class="contact-list">
-            <li class="list-group-item"><img src="./images/envelope-solid.svg"> E-mail</li>
-            <li class="list-group-item"><img src="./images/linkedin.svg"> LinkedIn</li>
-            <li class="list-group-item"><img src="./images/square-instagram.svg"> Instagram</li>
-            <li class="list-group-item"><img src="./images/address-book-solid.svg"> Phone Number</li>
+            
+            <li class="list-group-item">
+                <a href="mailto:l.elizabeth.eaton@gmail.com">
+                    <img src="./images/envelope-solid.svg"></a> l.elizabeth.eaton@gmail.com</li>
+
+            <li class="list-group-item">
+                <a href="https://www.linkedin.com/in/lelizabetheaton1996/" target="_blank"><img src="./images/linkedin.svg"></a> lelizabetheaton1996</li>
+
+            <li class="list-group-item">
+                <a href="https://www.instagram.com/eaton_messs/" target="_blank"><img src="./images/square-instagram.svg"></a> eaton_messs</li>
+
+            <li class="list-group-item"><img src="./images/address-book-solid.svg"> 07538216837</li>
+
         </ul>
     </div>
 </section>
@@ -145,7 +159,7 @@
         <li><img src="./images/file-solid.svg"> CV</li>
     </ul>
     <div class="home" href="#my-name">
-        <a href="#my-name" <button type="button" class="btn btn-outline-light homeButton">Top</button></a>
+        <a href="#my-name"<button type="button" class="btn btn-outline-light homeButton">Top</button></a>
     </div>
 </footer>
 </main>
