--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@
 <!--footer-->
 <footer>
     <ul class="footer-list">
-        <li><img src="./images/github.svg"> GitHub</li>
-        <li><img src="./images/file-solid.svg"> CV</li>
+        <li><a href="https://github.com/eatontechnology" target="_blank"><img src="./images/github.svg"></a> GitHub</li>
+        <li><a href="https://drive.google.com/file/d/1z9Hi9FMfBFOgHvJEecVgfjQw1qBCRGu0/view?usp=drive_link" target="_blank"><img src="./images/file-solid.svg"></a> CV</li>
     </ul>
+
     <div class="home" href="#my-name">
         <a href="#my-name"<button type="button" class="btn btn-outline-light homeButton">Top</button></a>
     </div>
