--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
 </head>
 
 <body>
-<!--replicated from starter code of previous portfolio-->
+    <!--replicated from starter code of previous portfolio-->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary customNav">
             <div class="container-fluid">
-                <a class="navbar-brand " id="my-name" >Lauren Eaton</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand " id="my-name">Lauren Eaton</a>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -31,138 +27,154 @@
                             <a class="nav-link" id="skills" href="#my-skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" id="aboutme" aria-current="page" href="#about-me">About Me | Contact</a>
+                            <a class="nav-link active" id="aboutme" aria-current="page" href="#about-me">About Me |
+                                Contact</a>
                         </li>
-                    </span>
                 </div>
             </div>
         </nav>
     </header>
 
     <!--Jumbotron-->
-<div class="p-5 bg-body-tertiary rounded-3 jumbotron">
-    <div class="container-fluid py-5 jumbotronContent">
-        <h1 class="display-5 fw-bold">Lauren Eaton - Student Front-End Web Developer</h1>
-        <br>
-        <img class="profilePicture" src="./images/Profile Picture.jpg">
-        <p class="col-md-8 fs-4"></p>
+    <div class="p-5 bg-body-tertiary rounded-3 jumbotron">
+        <div class="container-fluid py-5 jumbotronContent">
+            <h1 class="display-5 fw-bold">Lauren Eaton - Student Front-End Web Developer</h1>
+            <br>
+            <img class="profilePicture" src="./images/Profile Picture.jpg">
+            <p class="col-md-8 fs-4 shortDescription">Mediocre Japanese Speaker & Film Photographer</p>
+        </div>
     </div>
-</div>
 
-<main class="projectsSection" id="my-projects">
-<div class="title">
-    <h1>Projects</h1>
-</div>
-<!--grid for projects-->
-<div class="row row-cols-1 row-cols-md-2 g-4 projectsGrid">
-    <!--horiseon-->
-    <div class="col">
-        <div class="card">
-            <a id="horiseon" title="horiseon picture" href="https://eatontechnology.github.io/horiseon-code-refactor/" target="_blank">
-            <img src="./images/horiseon.jpeg" class="card-img-top" alt="horiseon cover">
-            <div class="card-body">
-                </a>
-                <h4 class="card-title">Horiseon Code Refactor</h4>
-                <p class="card-text">CSS refactoring project for Horiseon to simplify and tidy up the associated style sheet, whilst keeping formatting.</p>
-            </div>
+    <main class="projectsSection" id="my-projects">
+        <div class="title">
+            <h1>Projects</h1>
         </div>
-    </div>
-    <!--html and css portfolio-->
-    <div class="col">
-        <div class="card">
-            <a id="past-portfolio" title="past-portfolio" href="https://eatontechnology.github.io/Lauren-Eaton-Portfolio/" target="_blank">
-            <img src="./images/cropped portfolio.jpg" class="card-img-top" alt="portfolio">
-            <div class="card-body">
-                </a>
-                <h4 class="card-title">HTML and CSS Portfolio</h4>
-                <p class="card-text">Portfolio made in HTML and styled with CSS made entirely from scratch to show current and future work using placeholders.</p>
-            </div>
-        </div>
-    </div>
-    <!--placeholder one-->
-    <div class="col">
-        <div class="card">
-            <img src="./images/placeholder img.svg" class="card-img-top" alt="placeholder1">
-            <div class="card-body">
-                <h5 class="card-title">Placeholder One</h5>
-                <p class="card-text">Exciting stuff to come!</p>
-            </div>
-        </div>
-    </div>
-    <!--placeholder two-->
-    <div class="col">
-        <div class="card">
-            <img src="./images/placeholder img.svg" class="card-img-top" alt="placeholder2">
-            <div class="card-body">
-                <h5 class="card-title">Placeholder Two</h5>
-                <p class="card-text">More exciting stuff to come!</p>
-            </div>
-        </div>
-    </div>
-</div>
-<!--skills section-->
-<section>
-    <div class="skillsSection" id="my-skills">
-        <h1 class="title">Skills</h1>
-        <ul class="list-group">
-            <li class="list-group-item"><img src="./images/html5.svg"> HTML</li>
-            <li class="list-group-item"><img src="./images/css3-alt.svg"> CSS</li>
-            <li class="list-group-item"><img src="./images/js.svg"> Javascript</li>
-            <li class="list-group-item"><img src="./images/pen-nib-solid.svg"> Web Design</li>
-            <li class="list-group-item"><img src="./images/file-code-regular.svg"> Responsive Design</li>
-            <li class="list-group-item"> <img src="./images/code-solid.svg"> Frameworks and Libraries</li>
-        </ul>
-    </div>
-</section>
-
-<!--about me section-->
-<section class="aboutme" id="about-me">
-    <h1 class="title">About Me | Contact</h1>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col aboutme-section">
-            <div class="card h-100">
-                <img src="./images/photography.png" class="card-img-top" alt="japan photography">
-                <div class="card-body">
-                    <h5 class="card-title">Hi, I'm Lauren!</h5>
-                    <p class="card-text">I am originally from Ilkeston, Derbyshire, but now live in Nottingham. I graduated from the
-                        University of Leeds in 2018
-                        and have made a career mostly in translation and localisation, utilising my BA Japanese Studies degree to assist in
-                        Japanese to English projects of all sizes and categories.<br><br> Since I was a teenager I have been involved with the
-                        charity <span style="color: #db5c4c; font-weight: bolder;">STAMMA</span> through
-                        various fundraisers and events, showing support for
-                        other young-adults who have struggled with stammering from childhood, as I have, and helping them gain the
-                        confidence and desire to speak oepnly outside of speech therapy.</p>
+        <!--grid for projects-->
+        <div class="row row-cols-1 row-cols-md-2 g-4 projectsGrid">
+            <!--horiseon-->
+            <div class="col">
+                <div class="card">
+                    <a id="horiseon" title="horiseon picture"
+                        href="https://eatontechnology.github.io/horiseon-code-refactor/" target="_blank">
+                        <img src="./images/horiseon.jpeg" class="card-img-top" alt="horiseon cover">
+                        <div class="card-body">
+                    </a>
+                    <h4 class="card-title">Horiseon Code Refactor</h4>
+                    <p class="card-text">CSS refactoring project for Horiseon to simplify and tidy up the associated
+                        style sheet, whilst keeping formatting.</p>
                 </div>
             </div>
         </div>
-        <ul class="contact-list">
-            
-            <li class="list-group-item">
-                <a href="mailto:l.elizabeth.eaton@gmail.com">
-                    <img src="./images/envelope-solid.svg"></a> l.elizabeth.eaton@gmail.com</li>
+        <!--html and css portfolio-->
+        <div class="col">
+            <div class="card">
+                <a id="past-portfolio" title="past-portfolio"
+                    href="https://eatontechnology.github.io/Lauren-Eaton-Portfolio/" target="_blank">
+                    <img src="./images/cropped portfolio.jpg" class="card-img-top" alt="portfolio">
+                    <div class="card-body">
+                </a>
+                <h4 class="card-title">HTML and CSS Portfolio</h4>
+                <p class="card-text">Portfolio made in HTML and styled with CSS made entirely from scratch to show
+                    current and future work using placeholders.</p>
+            </div>
+        </div>
+        </div>
+        <!--placeholder one-->
+        <div class="col">
+            <div class="card">
+                <img src="./images/placeholder img.svg" class="card-img-top" alt="placeholder1">
+                <div class="card-body">
+                    <h5 class="card-title">Placeholder One</h5>
+                    <p class="card-text">Exciting stuff to come!</p>
+                </div>
+            </div>
+        </div>
+        <!--placeholder two-->
+        <div class="col">
+            <div class="card">
+                <img src="./images/placeholder img.svg" class="card-img-top" alt="placeholder2">
+                <div class="card-body">
+                    <h5 class="card-title">Placeholder Two</h5>
+                    <p class="card-text">More exciting stuff to come!</p>
+                </div>
+            </div>
+        </div>
+        </div>
+        <!--skills section-->
+        <section>
+            <div class="skillsSection" id="my-skills">
+                <h1 class="title">Skills</h1>
+                <ul class="list-group">
+                    <li class="list-group-item"><img src="./images/html5.svg"> HTML</li>
+                    <li class="list-group-item"><img src="./images/css3-alt.svg"> CSS</li>
+                    <li class="list-group-item"><img src="./images/js.svg"> Javascript</li>
+                    <li class="list-group-item"><img src="./images/pen-nib-solid.svg"> Web Design</li>
+                    <li class="list-group-item"><img src="./images/file-code-regular.svg"> Responsive Design</li>
+                    <li class="list-group-item"> <img src="./images/code-solid.svg"> Frameworks and Libraries</li>
+                </ul>
+            </div>
+        </section>
 
-            <li class="list-group-item">
-                <a href="https://www.linkedin.com/in/lelizabetheaton1996/" target="_blank"><img src="./images/linkedin.svg"></a> lelizabetheaton1996</li>
+        <!--about me section-->
+        <section class="aboutme" id="about-me">
+            <h1 class="title">About Me | Contact</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col aboutme-section">
+                    <div class="card h-100">
+                        <img src="./images/photography.png" class="card-img-top" alt="japan photography">
+                        <div class="card-body">
+                            <h5 class="card-title">Hi, I'm Lauren!</h5>
+                            <p class="card-text">I am originally from Ilkeston, Derbyshire, but now live in Nottingham.
+                                I graduated from the
+                                University of Leeds in 2018
+                                and have made a career mostly in translation and localisation, utilising my BA Japanese
+                                Studies degree to assist in
+                                Japanese to English projects of all sizes and categories.<br><br> Since I was a teenager
+                                I have been involved with the
+                                charity <span style="color: #db5c4c; font-weight: bolder;">STAMMA</span> through
+                                various fundraisers and events, showing support for
+                                other young-adults who have struggled with stammering from childhood, as I have, and
+                                helping them gain the
+                                confidence and desire to speak oepnly outside of speech therapy.</p>
+                        </div>
+                    </div>
+                </div>
+                <ul class="contact-list">
 
-            <li class="list-group-item">
-                <a href="https://www.instagram.com/eaton_messs/" target="_blank"><img src="./images/square-instagram.svg"></a> eaton_messs</li>
+                    <li class="list-group-item">
+                        <a href="mailto:l.elizabeth.eaton@gmail.com">
+                            <img src="./images/envelope-solid.svg"></a> l.elizabeth.eaton@gmail.com
+                    </li>
 
-            <li class="list-group-item"><img src="./images/address-book-solid.svg"> 07538216837</li>
+                    <li class="list-group-item">
+                        <a href="https://www.linkedin.com/in/lelizabetheaton1996/" target="_blank"><img
+                                src="./images/linkedin.svg"></a> lelizabetheaton1996
+                    </li>
 
-        </ul>
-    </div>
-</section>
-<!--footer-->
-<footer>
-    <ul class="footer-list">
-        <li><a href="https://github.com/eatontechnology" target="_blank"><img src="./images/github.svg"></a> GitHub</li>
-        <li><a href="https://drive.google.com/file/d/1z9Hi9FMfBFOgHvJEecVgfjQw1qBCRGu0/view?usp=drive_link" target="_blank"><img src="./images/file-solid.svg"></a> CV</li>
-    </ul>
+                    <li class="list-group-item">
+                        <a href="https://www.instagram.com/eaton_messs/" target="_blank"><img
+                                src="./images/square-instagram.svg"></a> eaton_messs
+                    </li>
 
-    <div class="home" href="#my-name">
-        <a href="#my-name"<button type="button" class="btn btn-outline-light homeButton">Top</button></a>
-    </div>
-</footer>
-</main>
+                    <li class="list-group-item"><img src="./images/address-book-solid.svg"> 07538216837</li>
+
+                </ul>
+            </div>
+        </section>
+        <!--footer-->
+        <footer>
+            <ul class="footer-list">
+                <li><a href="https://github.com/eatontechnology" target="_blank"><img src="./images/github.svg"></a>
+                    GitHub</li>
+                <li><a href="https://drive.google.com/file/d/1z9Hi9FMfBFOgHvJEecVgfjQw1qBCRGu0/view?usp=drive_link"
+                        target="_blank"><img src="./images/file-solid.svg"></a> CV</li>
+            </ul>
+
+            <div class="home" href="#my-name">
+                <a href="#my-name" <button type="button" class="btn btn-outline-light homeButton">Top</button></a>
+            </div>
+        </footer>
+    </main>
 </body>
+
 </html>
