adding alts to all imgs

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container-fluid py-5 jumbotronContent">
             <h1 class="display-5 fw-bold">Lauren Eaton - Student Front-End Web Developer</h1>
             <br>
-            <img class="profilePicture" src="./images/Profile Picture.jpg">
+            <img class="profilePicture" src="./images/Profile Picture.jpg" alt="profile picture">
             <p class="col-md-8 fs-4 shortDescription">Mediocre Japanese Speaker & Film Photographer</p>
         </div>
     </div>
@@ -70,7 +70,7 @@
             <div class="card">
                 <a id="past-portfolio" title="past-portfolio"
                     href="https://eatontechnology.github.io/Lauren-Eaton-Portfolio/" target="_blank">
-                    <img src="./images/cropped portfolio.jpg" class="card-img-top" alt="portfolio">
+                    <img src="./images/cropped portfolio.jpg" class="card-img-top" alt="portfolio screenshot">
                     <div class="card-body">
                 </a>
                 <h4 class="card-title">HTML and CSS Portfolio</h4>
@@ -143,20 +143,20 @@
 
                     <li class="list-group-item">
                         <a href="mailto:l.elizabeth.eaton@gmail.com">
-                            <img src="./images/envelope-solid.svg"></a> l.elizabeth.eaton@gmail.com
+                            <img src="./images/envelope-solid.svg" alt="envelope icon"></a> l.elizabeth.eaton@gmail.com
                     </li>
 
                     <li class="list-group-item">
                         <a href="https://www.linkedin.com/in/lelizabetheaton1996/" target="_blank"><img
-                                src="./images/linkedin.svg"></a> lelizabetheaton1996
+                                src="./images/linkedin.svg" alt="linkedin icon"></a> lelizabetheaton1996
                     </li>
 
                     <li class="list-group-item">
                         <a href="https://www.instagram.com/eaton_messs/" target="_blank"><img
-                                src="./images/square-instagram.svg"></a> eaton_messs
+                                src="./images/square-instagram.svg" alt="insta icon"></a> eaton_messs
                     </li>
 
-                    <li class="list-group-item"><img src="./images/address-book-solid.svg"> 07538216837</li>
+                    <li class="list-group-item"><img src="./images/address-book-solid.svg" alt="phone icon"> 07538216837</li>
 
                 </ul>
             </div>
@@ -164,10 +164,10 @@
         <!--footer-->
         <footer>
             <ul class="footer-list">
-                <li><a href="https://github.com/eatontechnology" target="_blank"><img src="./images/github.svg"></a>
+                <li><a href="https://github.com/eatontechnology" target="_blank"><img src="./images/github.svg" alt="github icon"></a>
                     GitHub</li>
                 <li><a href="https://drive.google.com/file/d/1z9Hi9FMfBFOgHvJEecVgfjQw1qBCRGu0/view?usp=drive_link"
-                        target="_blank"><img src="./images/file-solid.svg"></a> CV</li>
+                        target="_blank"><img src="./images/file-solid.svg" alt="file icon"></a> CV</li>
             </ul>
 
             <div class="home" href="#my-name">
