fixed width issues

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h1 class="title">About Me | Contact</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col aboutme-section">
-                    <div class="card h-100">
+                    <div class="card h-100 aboutmeCard">
                         <img src="./images/photography.png" class="card-img-top" alt="japan photography">
                         <div class="card-body">
                             <h5 class="card-title">Hi, I'm Lauren!</h5>
