--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary customNav">
             <div class="container-fluid">
                 <a class="navbar-brand " id="my-name">Lauren Eaton</a>
-                <div class="collapse navbar-collapse" id="navbarText">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" id="projects" href="#my-projects">Projects</a>
@@ -30,6 +34,7 @@
                             <a class="nav-link active" id="aboutme" aria-current="page" href="#about-me">About Me |
                                 Contact</a>
                         </li>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -175,6 +180,8 @@
             </div>
         </footer>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="..."
+        defer></script>
 </body>
 
 </html>
