added recent project

--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
             <!--horiseon-->
             <div class="col">
                 <div class="card">
-                    <a id="horiseon" title="horiseon picture"
-                        href="https://eatontechnology.github.io/horiseon-code-refactor/" target="_blank">
-                        <img src="./images/horiseon.jpeg" class="card-img-top" alt="horiseon cover">
+                    <a id="horiseon" title="postcode picture"
+                        href="https://gemma-wood.github.io/Postcode-Guardian/" target="_blank">
+                        <img src="https://github.com/Gemma-Wood/Postcode-Guardian/blob/main/assets/media/Screenshot%201.png?raw=true" class="card-img-top" alt="postcode cover">
                         <div class="card-body">
                     </a>
-                    <h4 class="card-title">Horiseon Code Refactor</h4>
-                    <p class="card-text">CSS refactoring project for Horiseon to simplify and tidy up the associated
-                        style sheet, whilst keeping formatting.</p>
+                    <h4 class="card-title">Postcode Guardian</h4>
+                    <p class="card-text">Collaborative project for front-end web dev bootcamp, working with server-side APIs to produce an application where UK postcodes can be inputted and statistics regarding the location/crime as well as a static map, are produced with API calls.</p>
                 </div>
             </div>
         </div>
@@ -115,6 +114,9 @@
                     <li class="list-group-item"><img src="./images/js.svg"> Javascript</li>
                     <li class="list-group-item"><img src="./images/pen-nib-solid.svg"> Web Design</li>
                     <li class="list-group-item"><img src="./images/file-code-regular.svg"> Responsive Design</li>
+                    <li class="list-group-item"> <img src="./images/code-solid.svg"> Node.js (change icon)</li>
+                    <li class="list-group-item"> <img src="./images/code-solid.svg"> React (change icon)</li>
+                    <li class="list-group-item"> <img src="./images/code-solid.svg"> jQuery (change icon)</li>
                     <li class="list-group-item"> <img src="./images/code-solid.svg"> Frameworks and Libraries</li>
                 </ul>
             </div>
