--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="col">
             <div class="card">
                 <a id="past-portfolio" title="past-portfolio"
-                    href="https://eatontechnology.github.io/Lauren-Eaton-Portfolio/" target="_blank">
+                    href="https://eaton-mess.github.io/Lauren-Eaton-Portfolio/" target="_blank">
                     <img src="./images/cropped portfolio.jpg" class="card-img-top" alt="portfolio screenshot">
                     <div class="card-body">
                 </a>
@@ -171,7 +171,7 @@
         <!--footer-->
         <footer>
             <ul class="footer-list">
-                <li><a href="https://github.com/eatontechnology" target="_blank"><img src="./images/github.svg" alt="github icon"></a>
+                <li><a href="https://github.com/eaton-mess" target="_blank"><img src="./images/github.svg" alt="github icon"></a>
                     GitHub</li>
                 <li><a href="https://drive.google.com/file/d/1z9Hi9FMfBFOgHvJEecVgfjQw1qBCRGu0/view?usp=drive_link"
                         target="_blank"><img src="./images/file-solid.svg" alt="file icon"></a> CV</li>
